// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with 1 expense 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $23.43
  </h2>
</div>
`;

exports[`should correctly render expenses summary with multiple expenses 1`] = `
<div>
  <h2>
    Viewing 
    4
     
    expenses
     totalling 
    $19,945.63
  </h2>
</div>
`;
